[package]
name = "fitness-server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = "0.4.42"
